k8s/overlays/local/second-step/patch-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudnotes-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: cloudnotes.127.0.0.1.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-nginx
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
